tests/compError/reassignment.ucl
// compError
// error: alias 'test' already exists
// tests/compError/reassignment.ucl:6 -> alias originally defined here
// tests/compError/reassignment.ucl:7 -> alias redefined here

test = 1
test = 2